# mcp-google-keep

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  release.yml
scripts/: smoke_test.py
src/server/: cli.py  keep_api.py
tests/: test_cli.py  test_keep_api.py  test_keep_client.py  test_main_module.py
