[project]
name = "mcp-google-keep"
version = "0.3.0"
description = "MCP Server for Google Keep (Gellyfish fork — SSE transport)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gkeepapi>=0.16.0",
    "mcp[cli]",
    "python-dotenv",
    "uvicorn",
    "starlette",
]
authors = [
    { name = "Jannik Feuerhahn", email = "jannik@feuer.dev" },
    { name = "Gellyfish Inc.", email = "gellyfish.ai@icloud.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/gellyfish-ai/mcp-google-keep"
Repository = "https://github.com/gellyfish-ai/mcp-google-keep"

[project.scripts]
mcp = "server.cli:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
